Fix layout issues

--- a/src/components/FlightDataInput.scss
+++ b/src/components/FlightDataInput.scss
@@ -4,6 +4,6 @@
 }
 
 .flightDataInputContent {
-  height: 65vh;
-  overflow-y: scroll;
+  // height: 65vh;
+  // overflow-y: scroll;
 }
